# rl-bipedal-walker

./: .gitignore  pyproject.toml
conf/: config.yaml
conf/agent/: ddpg.yaml  es.yaml  evolutional.yaml
notebooks/: analysis.ipynb  es.ipynb  gradient-approx.ipynb
rl-bipedal-walker/: agent.py  core.py  ddpg.py  es.py  evolution.py  evolutional.py  main.py  model.py  replay_buffer.py
