[tool.poetry]
name = "rl-bipedal-walker"
version = "0.1.0"
description = ""
authors = ["thomaszub <thomas.zub@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.11.0"
tqdm = "^4.64.0"
gym = {version = "^0.23.1", extras = ["classic_control", "box2d"]}

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
